Generelized IoU function and working on nms function loop.

--- a/WarmingUp_with_MNIST/YOLO_MNIST_Localization.ipynb
+++ b/WarmingUp_with_MNIST/YOLO_MNIST_Localization.ipynb
@@ -12,13 +12,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 179,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "wAHeh1BRufX4",
-        "outputId": "fca4dcf7-8288-42b7-a655-e8c2cc74a700"
+        "outputId": "4cef43db-1d01-46ed-9300-5b6200fec7c6"
       },
       "outputs": [
         {
@@ -26,21 +26,14 @@
           "name": "stdout",
           "text": [
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
-            "Collecting torchinfo\n",
-            "  Downloading torchinfo-1.7.0-py3-none-any.whl (22 kB)\n",
-            "Installing collected packages: torchinfo\n",
-            "Successfully installed torchinfo-1.7.0\n",
+            "Requirement already satisfied: torchinfo in /usr/local/lib/python3.7/dist-packages (1.7.0)\n",
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
-            "Collecting torchmetrics\n",
-            "  Downloading torchmetrics-0.9.3-py3-none-any.whl (419 kB)\n",
-            "\u001b[K     |████████████████████████████████| 419 kB 5.1 MB/s \n",
-            "\u001b[?25hRequirement already satisfied: typing-extensions in /usr/local/lib/python3.7/dist-packages (from torchmetrics) (4.1.1)\n",
-            "Requirement already satisfied: packaging in /usr/local/lib/python3.7/dist-packages (from torchmetrics) (21.3)\n",
-            "Requirement already satisfied: numpy>=1.17.2 in /usr/local/lib/python3.7/dist-packages (from torchmetrics) (1.21.6)\n",
+            "Requirement already satisfied: torchmetrics in /usr/local/lib/python3.7/dist-packages (0.9.3)\n",
             "Requirement already satisfied: torch>=1.3.1 in /usr/local/lib/python3.7/dist-packages (from torchmetrics) (1.12.1+cu113)\n",
-            "Requirement already satisfied: pyparsing!=3.0.5,>=2.0.2 in /usr/local/lib/python3.7/dist-packages (from packaging->torchmetrics) (3.0.9)\n",
-            "Installing collected packages: torchmetrics\n",
-            "Successfully installed torchmetrics-0.9.3\n"
+            "Requirement already satisfied: packaging in /usr/local/lib/python3.7/dist-packages (from torchmetrics) (21.3)\n",
+            "Requirement already satisfied: typing-extensions in /usr/local/lib/python3.7/dist-packages (from torchmetrics) (4.1.1)\n",
+            "Requirement already satisfied: numpy>=1.17.2 in /usr/local/lib/python3.7/dist-packages (from torchmetrics) (1.21.6)\n",
+            "Requirement already satisfied: pyparsing!=3.0.5,>=2.0.2 in /usr/local/lib/python3.7/dist-packages (from packaging->torchmetrics) (3.0.9)\n"
           ]
         }
       ],
@@ -63,13 +56,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 180,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "BOraK1TX7XZB",
-        "outputId": "766643c0-ded1-423e-f64d-50dae671caa1"
+        "outputId": "259d5789-4ab7-48b9-f310-4505121f5f11"
       },
       "outputs": [
         {
@@ -1736,7 +1729,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 227,
       "metadata": {
         "id": "7O8u0S3PweFR"
       },
@@ -1777,47 +1770,47 @@
         "    bbox_absolute = torch.stack((x_min, y_min, x_max, y_max), dim=-1)\n",
         "    return bbox_absolute\n",
         "\n",
-        "def intersection_over_union(pred_box:torch.Tensor, true_box:torch.Tensor)->torch.Tensor:\n",
+        "def intersection_over_union(bboxes1:torch.Tensor, bboxes2:torch.Tensor)->torch.Tensor:\n",
         "    \"\"\"\n",
         "    Intersection over Union method.\n",
         "\n",
         "    Args:\n",
-        "        pred_box : torch.Tensor of shape (N, 5)\n",
-        "            Predicted bounding boxes of a batch, in a given cell.\n",
-        "        true_box : torch.Tensor of shape (N, 5)\n",
-        "            Ground truth bounding boxes of a batch, in a given cell.\n",
+        "        bboxes1 : torch.Tensor of shape (N, 5)\n",
+        "            Bounding boxes of a batch, in a given cell.\n",
+        "        bboxes2 : torch.Tensor of shape (N, 5)\n",
+        "            Bounding boxes of a batch, in a given cell.\n",
         "\n",
         "    Return:\n",
         "        iou : float\n",
         "            Number between 0 and 1 where 1 is a perfect overlap.\n",
         "    \"\"\"\n",
-        "    assert pred_box.shape[-1] == 5 and true_box.shape[-1] == 5, \"All bbox should be of shape (N,5).\"\n",
+        "    assert bboxes1.shape[-1] >= 4 and bboxes2.shape[-1] >= 4, \"All bbox should be of shape (N,4) or (N,5).\"\n",
         "\n",
         "    ### Convert cell reltative coordinates to absolute coordinates\n",
-        "    pred_box = relative2absolute(pred_box)\n",
-        "    true_box = relative2absolute(true_box)   \n",
-        "    xmin_pred, ymin_pred, xmax_pred, ymax_pred = pred_box.permute(1,0)\n",
-        "    xmin_true, ymin_true, xmax_true, ymax_true = true_box.permute(1,0)\n",
+        "    bboxes1 = relative2absolute(bboxes1)\n",
+        "    bboxes2 = relative2absolute(bboxes2)   \n",
+        "    xmin1, ymin1, xmax1, ymax1 = bboxes1.permute(1,0)\n",
+        "    xmin2, ymin2, xmax2, ymax2 = bboxes2.permute(1,0)\n",
         "\n",
         "    ### There is no object if all coordinates are zero\n",
-        "    isObject = xmin_true + ymin_true + xmax_true + ymax_true\n",
+        "    isObject = xmin2 + ymin2 + xmax2 + ymax2\n",
         "    isObject = isObject.to(torch.bool)\n",
         "\n",
         "    smoothing_factor = 1e-10\n",
         "\n",
         "    ### x, y overlaps btw pred and groundtrue\n",
-        "    xmin_overlap = torch.maximum(xmin_pred, xmin_true)\n",
-        "    xmax_overlap = torch.minimum(xmax_pred, xmax_true)\n",
-        "    ymin_overlap = torch.maximum(ymin_pred, ymin_true)\n",
-        "    ymax_overlap = torch.minimum(ymax_pred, ymax_true)\n",
+        "    xmin_overlap = torch.maximum(xmin1, xmin2)\n",
+        "    xmax_overlap = torch.minimum(xmax1, xmax2)\n",
+        "    ymin_overlap = torch.maximum(ymin1, ymin2)\n",
+        "    ymax_overlap = torch.minimum(ymax1, ymax2)\n",
         "    \n",
         "    ### Pred and groundtrue areas\n",
-        "    pred_box_area = (xmax_pred - xmin_pred) * (ymax_pred - ymin_pred)\n",
-        "    true_box_area = (xmax_true - xmin_true) * (ymax_true - ymin_true)\n",
+        "    box1_area = (xmax1 - xmin1) * (ymax1 - ymin1)\n",
+        "    box2_area = (xmax2 - xmin2) * (ymax2 - ymin2)\n",
         "\n",
         "    ### Compute intersection area, union area and IoU\n",
         "    overlap_area = torch.maximum((xmax_overlap - xmin_overlap), torch.Tensor([0]).to(device)) * torch.maximum((ymax_overlap - ymin_overlap), torch.Tensor([0]).to(device))\n",
-        "    union_area = (pred_box_area + true_box_area) - overlap_area\n",
+        "    union_area = (box1_area + box2_area) - overlap_area\n",
         "    iou = (overlap_area + smoothing_factor) / (union_area + smoothing_factor)\n",
         "    \n",
         "    ### Set IoU to zero when there is no coordinates (i.e. no object)\n",
@@ -1854,15 +1847,31 @@
         "        tens_reshape = torch.reshape(tens, (tens.shape[0], -1))\n",
         "        indices = torch.argmax(tens_reshape, dim=1)\n",
         "\n",
-        "        col_indices = (ind / S).to(torch.int32)\n",
-        "        row_indices = ind % S\n",
+        "        col_indices = (indices / S).to(torch.int32)\n",
+        "        row_indices = indices % S\n",
         "\n",
         "        batch_indices = torch.stack((col_indices, row_indices)).T\n",
         "        return batch_indices\n",
         "    \n",
+        "    N = len(bbox)\n",
         "    labels_prob = torch.softmax(labels, dim=-1)\n",
         "    bbox[:,:,:,4] = bbox[:,:,:,4] * torch.max(labels_prob, dim=-1)[0]\n",
-        "    while bbox != []:\n",
+        "\n",
+        "    bbox_maxconf = []\n",
+        "    while torch.any(bbox):\n",
+        "        ### 1) finding indices i,j of the max confidence number of each image \n",
+        "        ### in the batch\n",
+        "        m = find_indices_max(bbox)\n",
+        "\n",
+        "        ### Getting bboxes with the highest pc number for each image\n",
+        "        M = bbox[range(N), m[:,0], m[:,1], :4]\n",
+        "        bbox_maxconf.append(M)\n",
+        "\n",
+        "        ### bbox var contains only bboxes with low pc numbers\n",
+        "        bbox[range(N), m[:,0], m[:,1]] = torch.Tensor([0])\n",
+        "        \n",
+        "        iou = intersection_over_union()\n",
+        "        if \n",
         "\n",
         "\n",
         "\n",
@@ -1878,237 +1887,97 @@
     {
       "cell_type": "code",
       "source": [
-        "a = torch.rand(64,6,6,5)\n",
-        "b = torch.rand(64,6,6,10)\n",
+        "def find_indices_max(tens):\n",
+        "    \"\"\"\n",
+        "    input tens : torch.Tensor of shape (N, S, S)\n",
+        "    output batch_indices : torch.Tensor of shape (N,2)\n",
+        "    \"\"\"\n",
+        "    S = tens.shape[1]\n",
         "\n",
-        "abis = a[:3,:,:,4]"
+        "    # Reshape to (N, S*S)\n",
+        "    tens_reshape = torch.reshape(tens, (tens.shape[0], -1))\n",
+        "    indices = torch.argmax(tens_reshape, dim=1)\n",
+        "\n",
+        "    col_indices = (indices / S).to(torch.int32)\n",
+        "    row_indices = indices % S\n",
+        "\n",
+        "    batch_indices = torch.stack((col_indices, row_indices)).T\n",
+        "    return batch_indices\n",
+        "\n",
+        "\n",
+        "a = torch.rand(64,6,6,5)\n"
       ],
       "metadata": {
-        "id": "K69kB3m9SLEx"
+        "id": "uS48-PaGKgp0"
       },
-      "execution_count": 157,
+      "execution_count": 223,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "abis"
+        "count = 0\n",
+        "while torch.any(a):\n",
+        "    indices = find_indices_max(a[:,:,:,4])\n",
+        "    a_nms = a[range(64), indices[:,0], indices[:,1], :4]\n",
+        "    a[range(64), indices[:,0], indices[:,1]] = 0\n",
+        "    count += 1"
       ],
       "metadata": {
-        "id": "0v6X80_2q3Se",
-        "outputId": "7547c1ba-d017-403c-adac-5ae24d591bef",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "xx6XvknELGMD"
       },
-      "execution_count": 170,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "tensor([[[0.2944, 0.7746, 0.9017, 0.1282, 0.7820, 0.8620],\n",
-              "         [0.0955, 0.0274, 0.7932, 0.7560, 0.7200, 0.5740],\n",
-              "         [0.0253, 0.0278, 0.6026, 0.4417, 0.4226, 0.4659],\n",
-              "         [0.1147, 0.7720, 0.5181, 0.8403, 0.9090, 0.9183],\n",
-              "         [0.4367, 0.5897, 0.3154, 0.4831, 0.6239, 0.8037],\n",
-              "         [0.2739, 0.7798, 0.2089, 0.9024, 0.8464, 0.2236]],\n",
-              "\n",
-              "        [[0.7703, 0.1461, 0.2592, 0.3945, 0.3076, 0.3682],\n",
-              "         [0.4949, 0.6463, 0.3689, 0.4075, 0.5676, 0.2568],\n",
-              "         [0.8515, 0.0700, 0.6274, 0.2434, 0.3024, 0.4494],\n",
-              "         [0.6039, 0.8361, 0.1565, 0.6807, 0.7658, 0.0344],\n",
-              "         [0.1701, 0.4812, 0.1371, 0.3313, 0.5261, 0.7314],\n",
-              "         [0.6981, 0.2664, 0.7849, 0.5657, 0.7640, 0.4376]],\n",
-              "\n",
-              "        [[0.7222, 0.0167, 0.6334, 0.1014, 0.3042, 0.8382],\n",
-              "         [0.9311, 0.3802, 0.9192, 0.4361, 0.7439, 0.5066],\n",
-              "         [0.4153, 0.3026, 0.4775, 0.7511, 0.6912, 0.3949],\n",
-              "         [0.3729, 0.1663, 0.0085, 0.2350, 0.0308, 0.5077],\n",
-              "         [0.8099, 0.9253, 0.9989, 0.3389, 0.0703, 0.0665],\n",
-              "         [0.1855, 0.1420, 0.5467, 0.5191, 0.2084, 0.0730]]])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 170
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "QH7XCfvMoyVN"
-      },
-      "execution_count": 160,
+      "execution_count": 224,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "toto = torch.reshape(a, (a.shape[0], -1))\n",
-        "ind = torch.argmax(toto, dim=1)\n",
-        "col_indices = (ind / 6).to(torch.int32)\n",
-        "row_indices = ind % 6\n",
-        "torch.stack((col_indices, row_indices)).T.shape"
+        "a_nms.shape"
       ],
       "metadata": {
-        "id": "c-vhq7Kvq_b3",
-        "outputId": "52d81b05-46a8-40e7-b491-1ad8a1188699",
+        "id": "YIHr0k3aQGWs",
+        "outputId": "9fb2f23c-f9c4-442c-b6db-48f51d8d67b7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 178,
+      "execution_count": 226,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "torch.Size([64, 2])"
+              "torch.Size([64, 4])"
             ]
           },
           "metadata": {},
-          "execution_count": 178
+          "execution_count": 226
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "a[:3,:,:,4].amax(dim=(1,2)).unsqueeze(0)"
+        "count"
       ],
       "metadata": {
-        "id": "mJJ8aOsDkla4",
-        "outputId": "c2d41276-7b6b-4233-e2f6-a8dc7f25630a",
+        "id": "_lSUlxiyPRFn",
+        "outputId": "3fa58025-3a60-4c40-9ec8-bec7957e792b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 134,
+      "execution_count": 225,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "tensor([[0.9965, 0.9994, 0.9832]])"
+              "36"
             ]
           },
           "metadata": {},
-          "execution_count": 134
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "a[:,:,:,4].amax(dim=(1,2))"
-      ],
-      "metadata": {
-        "id": "a9BtFgt7psTe",
-        "outputId": "abbb24bb-5d3f-4fbe-e415-51a5dbc1b803",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 156,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "tensor([0.9965, 0.9994, 0.9832, 0.9990, 0.9940, 0.9712, 0.9835, 0.9786, 0.9774,\n",
-              "        0.9335, 0.9776, 0.9610, 0.9811, 0.9028, 1.0000, 0.9994, 0.9913, 0.9910,\n",
-              "        0.9220, 0.9854, 0.9972, 0.9873, 0.9911, 0.9660, 0.9719, 0.9619, 0.9963,\n",
-              "        0.9811, 0.9856, 0.9870, 0.9913, 0.9344, 0.9837, 0.9980, 0.9668, 0.9788,\n",
-              "        0.9479, 0.8719, 0.9243, 0.9115, 0.9827, 0.9028, 0.9918, 0.9813, 0.9811,\n",
-              "        0.9839, 0.9735, 0.9414, 0.9137, 0.9992, 0.9790, 0.9584, 0.9971, 0.9734,\n",
-              "        0.9650, 0.9757, 0.9964, 0.9772, 0.9689, 0.9789, 0.9738, 0.9630, 0.9778,\n",
-              "        0.9563])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 156
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "a[:,:,:,4] > a[:,:,:,4].amax(dim=(1,2))"
-      ],
-      "metadata": {
-        "id": "z442gseLjSN9",
-        "outputId": "dcb11663-c46a-4c53-c39a-b77dff269840",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 165
-        }
-      },
-      "execution_count": 154,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "RuntimeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-154-028434628683>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ma\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mamax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdim\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mRuntimeError\u001b[0m: The size of tensor a (6) must match the size of tensor b (64) at non-singleton dimension 2"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "np.where(a[:3,:,:,4] == a[:3,:,:,4].amax(dim=(1,2)).repeat(2))"
-      ],
-      "metadata": {
-        "id": "6wjmY_0SoGGY",
-        "outputId": "50c9d469-66c5-47fd-aa7c-b9f519128646",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 144,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(array([], dtype=int64), array([], dtype=int64), array([], dtype=int64))"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 144
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "a[:3,:,:,4].amax(dim=(1,2)).repeat(3)"
-      ],
-      "metadata": {
-        "id": "XyB8ejTnoQEB",
-        "outputId": "5b10e3e3-78e0-445e-a0f7-5050957be715",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 140,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "tensor([0.9965, 0.9994, 0.9832, 0.9965, 0.9994, 0.9832, 0.9965, 0.9994, 0.9832])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 140
+          "execution_count": 225
         }
       ]
     },
