Working on retriving indice of max(pc)

--- a/WarmingUp_with_MNIST/YOLO_MNIST_Localization.ipynb
+++ b/WarmingUp_with_MNIST/YOLO_MNIST_Localization.ipynb
@@ -1729,7 +1729,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 227,
+      "execution_count": 230,
       "metadata": {
         "id": "7O8u0S3PweFR"
       },
@@ -1781,8 +1781,8 @@
         "            Bounding boxes of a batch, in a given cell.\n",
         "\n",
         "    Return:\n",
-        "        iou : float\n",
-        "            Number between 0 and 1 where 1 is a perfect overlap.\n",
+        "        iou : torch.Tensor of shape (N,)\n",
+        "            Batch of floats between 0 and 1 where 1 is a perfect overlap.\n",
         "    \"\"\"\n",
         "    assert bboxes1.shape[-1] >= 4 and bboxes2.shape[-1] >= 4, \"All bbox should be of shape (N,4) or (N,5).\"\n",
         "\n",
@@ -1853,26 +1853,38 @@
         "        batch_indices = torch.stack((col_indices, row_indices)).T\n",
         "        return batch_indices\n",
         "    \n",
+        "    assert 0. < iou_threshold < 1, \"iou_threshold should be a float between greeter than 0 and lower than 1.\"\n",
+        "\n",
         "    N = len(bbox)\n",
+        "    S = bbox.shape[1]\n",
         "    labels_prob = torch.softmax(labels, dim=-1)\n",
         "    bbox[:,:,:,4] = bbox[:,:,:,4] * torch.max(labels_prob, dim=-1)[0]\n",
         "\n",
-        "    bbox_maxconf = []\n",
-        "    while torch.any(bbox):\n",
-        "        ### 1) finding indices i,j of the max confidence number of each image \n",
-        "        ### in the batch\n",
-        "        m = find_indices_max(bbox)\n",
+        "    bbox_maxconf = torch.zeros(N,4)\n",
+        "    \n",
+        "    ### 1) finding indices i,j of the max confidence number of each image \n",
+        "    ### in the batch\n",
+        "    m = find_indices_max(bbox)\n",
+        "    return m, bbox\n",
         "\n",
-        "        ### Getting bboxes with the highest pc number for each image\n",
-        "        M = bbox[range(N), m[:,0], m[:,1], :4]\n",
-        "        bbox_maxconf.append(M)\n",
+        "    ### Getting bboxes with the highest pc number for each image\n",
+        "    ### Shape : (N, 4)\n",
+        "    bbox_maxconf = bbox[range(N), m[:,0], m[:,1], :4]\n",
         "\n",
-        "        ### bbox var contains only bboxes with low pc numbers\n",
-        "        bbox[range(N), m[:,0], m[:,1]] = torch.Tensor([0])\n",
-        "        \n",
-        "        iou = intersection_over_union()\n",
-        "        if \n",
+        "    ### Removing bboxes with the highest pc numbers\n",
+        "    bbox[range(N), m[:,0], m[:,1]] = torch.Tensor([0])\n",
+        "    for cell_i in range(S):\n",
+        "        for cell_j in range(S):\n",
+        "            iou = intersection_over_union(bbox[:,cell_i, cell_j], bbox_maxconf)\n",
+        "            iou_bool = iou >= iou_threshold\n",
+        "            \n",
+        "            ### iou to shape (N,4)\n",
+        "            iou_bool = iou_bool.unsqueeze(1).repeat((1, bbox.shape[-1]))\n",
         "\n",
+        "            bbox[:,cell_i, cell_j] = bbox[:,cell_i, cell_j].masked_fill(iou_bool, 0)\n",
+        "\n",
+        "\n",
+        "    return bbox\n",
         "\n",
         "\n",
         "\n",
@@ -1881,103 +1893,109 @@
       "metadata": {
         "id": "DLyoeZO4QYHB"
       },
-      "execution_count": null,
+      "execution_count": 281,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "def find_indices_max(tens):\n",
-        "    \"\"\"\n",
-        "    input tens : torch.Tensor of shape (N, S, S)\n",
-        "    output batch_indices : torch.Tensor of shape (N,2)\n",
-        "    \"\"\"\n",
-        "    S = tens.shape[1]\n",
-        "\n",
-        "    # Reshape to (N, S*S)\n",
-        "    tens_reshape = torch.reshape(tens, (tens.shape[0], -1))\n",
-        "    indices = torch.argmax(tens_reshape, dim=1)\n",
-        "\n",
-        "    col_indices = (indices / S).to(torch.int32)\n",
-        "    row_indices = indices % S\n",
-        "\n",
-        "    batch_indices = torch.stack((col_indices, row_indices)).T\n",
-        "    return batch_indices\n",
-        "\n",
-        "\n",
-        "a = torch.rand(64,6,6,5)\n"
+        "a_test = torch.rand(64,6,6,5)\n",
+        "b_test = torch.rand(64,6,6,10)\n",
+        "m, bbox = non_max_suppression(a_test, b_test, 0.7)"
       ],
       "metadata": {
-        "id": "uS48-PaGKgp0"
+        "id": "etfARfnjZGST"
       },
-      "execution_count": 223,
+      "execution_count": 282,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "count = 0\n",
-        "while torch.any(a):\n",
-        "    indices = find_indices_max(a[:,:,:,4])\n",
-        "    a_nms = a[range(64), indices[:,0], indices[:,1], :4]\n",
-        "    a[range(64), indices[:,0], indices[:,1]] = 0\n",
-        "    count += 1"
+        "S = bbox.shape[1]\n",
+        "\n",
+        "# Reshape to (N, S*S)\n",
+        "tens_reshape = torch.reshape(tens, (tens.shape[0], -1))\n",
+        "indices = torch.argmax(tens_reshape, dim=1)\n",
+        "\n",
+        "col_indices = (indices / S).to(torch.int32)\n",
+        "row_indices = indices % S\n",
+        "\n",
+        "batch_indices = torch.stack((col_indices, row_indices)).T"
       ],
       "metadata": {
-        "id": "xx6XvknELGMD"
-      },
-      "execution_count": 224,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "a_nms.shape"
-      ],
-      "metadata": {
-        "id": "YIHr0k3aQGWs",
-        "outputId": "9fb2f23c-f9c4-442c-b6db-48f51d8d67b7",
+        "id": "5fClilX0ZIFr",
+        "outputId": "d295f50a-4906-4f5d-a737-825d3aef4f30",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 226,
+      "execution_count": 283,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "torch.Size([64, 4])"
+              "torch.Size([64, 6, 6, 5])"
             ]
           },
           "metadata": {},
-          "execution_count": 226
+          "execution_count": 283
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "count"
+        "bbox.shape[0]"
       ],
       "metadata": {
-        "id": "_lSUlxiyPRFn",
-        "outputId": "3fa58025-3a60-4c40-9ec8-bec7957e792b",
+        "id": "JX0uHev8bOsr",
+        "outputId": "c679feff-f044-400a-df51-56696f42ab6c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 225,
+      "execution_count": 289,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "36"
+              "64"
             ]
           },
           "metadata": {},
-          "execution_count": 225
+          "execution_count": 289
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "row_indices"
+      ],
+      "metadata": {
+        "id": "w-Q0Mms4brOc",
+        "outputId": "ea276032-5821-4f7d-ddeb-dbe67275fd61",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 306,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([ 5,  3,  6, 25, 28, 26, 28, 17, 23, 23, 10, 16, 21,  3, 25,  8, 26,  8,\n",
+              "         3, 12, 27, 22, 27,  6, 13, 10,  2, 22,  6, 23, 13, 16,  3, 16,  2, 27,\n",
+              "        28, 21,  8, 20,  8, 16, 27, 27, 20, 16,  6, 28, 18, 16, 26, 13, 18, 28,\n",
+              "        13,  2,  8, 12,  8, 11, 11, 10,  5,  8])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 306
         }
       ]
     },
