--- a/WarmingUp_with_MNIST/plot_all_bboxes_utils.ipynb
+++ b/WarmingUp_with_MNIST/plot_all_bboxes_utils.ipynb
@@ -190,6 +190,53 @@
     "\n",
     "    plt.imshow(img_to_draw)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for img, label, bbox_true in training_dataset:\n",
+    "    break\n",
+    "\n",
+    "\n",
+    "fig = plt.figure(figsize=(1, 1))\n",
+    "\n",
+    "idx = np.random.randint(0,64)\n",
+    "img_t = img[idx].to(torch.device('cpu')).squeeze(0)\n",
+    "img_arr = img_t.numpy() * 255.0\n",
+    "img1 = PIL.Image.fromarray(img_arr)\n",
+    "rgbimg = PIL.Image.new(\"RGBA\", img1.size)\n",
+    "rgbimg.paste(img1)\n",
+    "\n",
+    "test_bbox_img1 = bbox_true[idx].unsqueeze(0)\n",
+    "bbox14_abs = relative2absolute_(test_bbox_img1)\n",
+    "\n",
+    "xmin, ymin, xmax, ymax, cx_abs, cy_abs = bbox14_abs.permute(1,0)\n",
+    "left, right, top, bottom = xmin, xmax, ymin, ymax\n",
+    "\n",
+    "draw = PIL.ImageDraw.Draw(rgbimg)\n",
+    "draw.line([(left, top), (left, bottom), (right, bottom), (right, top), (left, top)], width=2, fill='red')\n",
+    "draw.point((cx_abs,cy_abs), fill=\"red\")\n",
+    "\n",
+    "gleft = 0\n",
+    "gright = 0\n",
+    "for it in range(6):\n",
+    "    g1 = 12.5*it\n",
+    "    g2 = 12.5*it\n",
+    "    \n",
+    "    grid_x = [(0,g1), (75,g2)]\n",
+    "    grid_y = [(g1,0), (g2,75)]\n",
+    "    draw.line(grid_x)\n",
+    "    draw.line(grid_y)\n",
+    "\n",
+    "\n",
+    "\n",
+    "fig.set_size_inches(5, 5)\n",
+    "plt.imshow(rgbimg)\n",
+    "plt.axis('off');"
+   ]
   }
  ],
  "metadata": {
