Minor updates : validation loop.

--- a/WarmingUp_with_MNIST/YOLO_MNIST_Localization.ipynb
+++ b/WarmingUp_with_MNIST/YOLO_MNIST_Localization.ipynb
@@ -2131,7 +2131,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 154,
+      "execution_count": 69,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2144,9 +2144,9 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "MSE BOX : 0.03178\n",
-            "MSE confidence score : 0.14767\n",
-            "class acc : 79.42%\n"
+            "MSE BOX : 0.01142\n",
+            "MSE confidence score : 0.13390\n",
+            "class acc : 96.98%\n"
           ]
         }
       ],
@@ -2160,27 +2160,22 @@
         "        ### prediction\n",
         "        bbox_preds, label_preds = model_MNIST(img)\n",
         "\n",
-        "        ### (N,4) -> (N, S, S, 5)\n",
-        "        bbox_true_6x6, cells_i, cells_j = bbox2Tensor(bbox_true)\n",
-        "        bbox_true_6x6, cells_i, cells_j = bbox_true_6x6.to(device), cells_i.to(device), cells_j.to(device)\n",
-        "        \n",
-        "        bbox_preds = bbox_preds.to(device)\n",
-        "\n",
-        "        ### keeping only cells (i,j) with an object \n",
-        "        # cells_with_obj = bbox_true_6x6.nonzero()[::5]\n",
-        "        # N, cells_i, cells_j, _ = cells_with_obj.permute(1,0)\n",
+        "        ### keeping only cells (i,j) with an object. TBM if multiple objects\n",
+        "        cells_with_obj = bbox_true.nonzero()[::5]\n",
+        "        N, cells_i, cells_j, _ = cells_with_obj.permute(1,0)\n",
         "\n",
         "        ### MSE along bbox coordinates and sizes in the cells containing an object\n",
-        "        N = range(len(img))\n",
-        "        mse_box = (1/len(img)) * torch.sum(torch.pow(bbox_true[:,:4] - bbox_preds[N, cells_i, cells_j,:4],2))\n",
+        "        # N = range(len(img))\n",
+        "        mse_box = (1/len(img)) * torch.sum(torch.pow(bbox_true[N, cells_i, cells_j,:4] - bbox_preds[N, cells_i, cells_j,:4],2))\n",
         "        \n",
         "        ### confidence score accuracy : sum of the all grid confidence scores\n",
         "        ### pred confidence score is confidence score times IoU.\n",
         "        mse_confidence_score = torch.zeros(len(img)).to(device)\n",
         "        for i in range(S):\n",
         "            for j in range(S):\n",
-        "                iou = intersection_over_union(bbox_true_6x6[:,i,j], bbox_preds[:,i,j], cells_i, cells_j).to(device)\n",
-        "                mse_confidence_score += torch.pow(bbox_true_6x6[:,i,j,-1] - bbox_preds[:,i,j,-1] * iou,2)\n",
+        "                # iou = intersection_over_union(bbox_true[:,i,j], bbox_preds[:,i,j], cells_i, cells_j).to(device)\n",
+        "                # mse_confidence_score += torch.pow(bbox_true[:,i,j,-1] - bbox_preds[:,i,j,-1] * iou,2)\n",
+        "                mse_confidence_score += torch.pow(bbox_true[:,i,j,-1] - bbox_preds[:,i,j,-1],2)\n",
         "        \n",
         "        mse_confidence_score = (1/(len(img))) * torch.sum(mse_confidence_score)\n",
         "\n",
@@ -2192,6 +2187,20 @@
         "print(f\"MSE confidence score : {mse_confidence_score.item():.5f}\")\n",
         "print(f\"class acc : {classes_acc.item()*100:.2f}%\")"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "code",
